add front-end V2